Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44022

topLevelAt does not work under Windows Embedded Compact 7

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.1
    • 5.4.0
    • None
    • Windows Embedded Compact 7
    • 9e4ef3539a5770f1b422b73b41dc3218ff4efc81

      QApplication::topLevelAt ddoes not work properly under Windows Embedded Compact 7. See attached example, which should print QPushbutton reference, but instead is 0.

        1. main.cpp
          0.6 kB
          Andreas Holzammer
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aholza Andreas Holzammer
            aholza Andreas Holzammer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes