Fix finding widgets for Windows Embedded Compact

ChildWindowFromPoint does not work properly under
wince, so lets use the plain old WindowFromPoint.

Task-number: QTBUG-44022
Change-Id: I49bae6409f2d11ddc01bea01f4c2f91a02b90892
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>

cregit: 9e4ef3539a5770f1b422b73b41dc3218ff4efc81 https://github.com/qt/qtbase/commit/9e4ef3539a5770f1b422b73b41dc3218ff4efc81